--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,15 @@
 		</dependency>
 
 	</dependencies>
-	
+	<build>
+        <plugins>
+	<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.3.1</version>
+</plugin>
+	</plugins>
+	</build>
 	<distributionManagement>
 		 <snapshotRepository>
 		    <id>nexusRepo</id>
